delivery address form added and details get added

--- a/TipTop/src/main/resources/templates/myProfile.html
+++ b/TipTop/src/main/resources/templates/myProfile.html
@@ -326,7 +326,115 @@
 						</div>
 					</div>
 
+						<!-- Delivery information -->
+					<div class="tab-pane fade" id="tab-4"
+						th:classappend="${classActiveDelivery}? 'in active'">
+						<div class="panel-group">
+							<div class="panel panel-default" style="border: none;">
+								<div class="panel-body">
+								
+								<ol class="breadcrumb">
+										<li class="breadcrumb-item active"><a
+											th:href="@{/listOfDeliveryAddresses}"
+											th:style="${listOfDeliveryAddresses}? 'color:red'">List of
+												Delivery Addresses</a></li>
 
+										<li class="breadcrumb-item active"><a
+											th:href="@{/addNewDeliveryAddress}"
+											th:style="${addNewDeliveryAddress}? 'color:red'">Add/Update
+												Delivery Address</a></li>
+
+									</ol>
+
+									<div th:if="${listOfDeliveryAddresses}">
+										<form th:action="@{/setDefaultDeliveryAddress}" method="post">
+											<table class="table">
+												<thead>
+													<tr>
+														<th>Default</th>
+														<th>Delivery Address</th>
+														<th>Operations</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr th:each="userDelivery : ${userDeliveryList}">
+														<td><input type="radio" name="defaultDeliveryAddressId"
+															th:value="${userDelivery.id}"
+															th:checked="${userDelivery.userDeliveryDefault}" /><span>Default</span></td>
+														<td th:text="${userDelivery.userDeliveryStreet1} + ',' + ${userDelivery.userDeliveryCity}"></td>
+														<td><a
+															th:href="@{/updateUserDelivery(id=${userDelivery.id})}"><i
+																class="glyphicon glyphicon-pencil"></i></a> <a
+															th:href="@{/removeUserDelivery(id=${userDelivery.id})}"><i
+																class="glyphicon glyphicon-remove"></i></a></td>
+													</tr>
+												</tbody>
+											</table>
+											<button class="btn btn-primary" type="submit">Save</button>
+										</form>
+									</div>
+
+									<div th:if="${addNewDeliveryAddress}">
+										<form th:action="@{addNewDeliveryAddress}" method="post">
+											<div class="bg-info" th:if="${updateUserDeliveryInfo}">User
+												details updated</div>
+
+											<input hidden="hidden" name="id" th:value="${userDelivery.id}" />
+
+											
+											<hr />
+											<h4>Delivery Address</h4>
+											<div class="form-group">
+												<label for="deliveryName">Name</label> <input type="text"
+													class="form-control" id="deliveryName"
+													placeholder="Receiver Name" th:name="userDeliveryName"
+													required="required"
+													th:value="${userDelivery.userDeliveryName}" />
+											</div>
+
+											<div class="form-group">
+												<label for="deliveryAddress">Street Address</label> <input
+													type="text" class="form-control" id="deliveryAddress"
+													placeholder="Street Address 1" th:name="userDeliveryStreet1"
+													required="required"
+													th:value="${userDelivery.userDeliveryStreet1}" /> <input
+													type="text" class="form-control"
+													placeholder="Street Address 2" th:name="userDeliveryStreet2"
+													th:value="${userDelivery.userDeliveryStreet2}" />
+											</div>
+
+											<div class="row">
+												<div class="col-xs-4">
+													<div class="form-group">
+														<label for="deliveryCity">City</label> <input type="text"
+															class="form-control" id="deliveryCity"
+															placeholder="Delivery city" th:name="userDeliveryCity"
+															required="required"
+															th:value="${userDelivery.userDeliveryCity}" />
+													</div>
+												</div>
+
+</div>
+
+												
+										
+
+											
+											<hr/>
+											<button type="submit" class="btn btn-primary btn-lg"> Save All</button>
+										</form>
+
+									</div>
+								
+								
+								
+								
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					
 				</div>
 			</div>
 		</div>
