--- a/TipTop/src/main/resources/templates/deliveryCart.html
+++ b/TipTop/src/main/resources/templates/deliveryCart.html
@@ -13,33 +13,34 @@
 				<h2 class="section-headline">
 					<h2 class="section-headline">
 						<i>MENU</i>
+						
+							<br />	<br />
 					</h2>
 				</h2>
 			</div>
 
 		</div>
-		<hr
-			style="position: absolute; width: 100%; height: 6px; background-color: #333; z-index: -1; margin-top: -80px;" />
+		
 
 		<div class="row" style="margin-top: 10px;">
-			<div class="col-xs-12">
+			<div class="col-xs-20">
 				<div class="row">
 					<div class="col-xs-6 text-left">
-						<a class="btn btn-primary" th:href="@{/menu}">Add more food</a>
+						<a class="btn btn-success" th:href="@{/menu}">Add more food</a>
 					</div>
 					<div class="col-xs-6 text-right">
-						<a class="btn btn-primary"
+						<a class="btn btn-success"
 							th:href="@{/checkout(id=${deliveryCart.id})}">Place the order</a>
 
 					</div>
 					<br />
 					<div th:if="${notEnoughStock}" class="alert alert-warning">Please
 						choose different qty</div>
-
+<br/><br/>
 					<div th:if="${emptyCart}" class="alert alert-warning">Please
 						add something to the cart</div>
 					
-					
+					<br/><br/>	<br />	<br />	<br />	<br />
 					<div class="row">
 						<div class="col-xs-8">
 							<h4>Dish</h4>
@@ -57,14 +58,15 @@
 					<div class="row" th:each="cartItem : ${cartItemList}">
 						<form th:action="@{/deliveryCart/updateCartItem}" method="post">
 							<hr />
-							<div class="col-xs-2">
-								<a th:href="@{foodDetail(id=${cartItem.food.id})}"> <img
-									class="img-responsive menu-food"
-									th:src="#{adminPath}+@{/image/food/}+${cartItem.food.id}+'.png'" />
+							<div class="col-xs-6">
+								<a th:href="@{foodDetail(id=${cartItem.food.id})}"> 
+									<img class="img-responsive menu-food" th:src="#{adminPath}+@{/image/food/}+${food.id}+'.png'"/>
 								</a>
 							</div>
+							
+						
 
-							<div class="col-xs-2">
+							<div class="col-xs-4">
 								<h5 style="color: green; font-size: large;">
 									&euro;<span th:text="${cartItem.food.price}"></span>
 								</h5>
