creating first javaScript file and writing delete function for the BackEnd admin page

--- a/BackEnd/src/main/resources/templates/header.html
+++ b/BackEnd/src/main/resources/templates/header.html
@@ -74,6 +74,7 @@
 			<script 
 			th:src="@{/js/jquery.min.js}"></script>
 		<script th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/scripts.js}"></script>
 		
 		
 		<script 
