--- a/BackEnd/src/main/resources/templates/foodList.html
+++ b/BackEnd/src/main/resources/templates/foodList.html
@@ -13,6 +13,7 @@
 				class="table table-bordered table-hover table-striped">
 				<thead>
 				<tr>
+				<th><input th:id="selectAllFoods" type="checkbox"/></th>
 				<th>name</th>
 				<th>type</th>
 				<th>category</th>
@@ -25,6 +26,10 @@
 				
 				<tbody>
 				<tr data-th-each="food : ${foodList}">
+				<td>
+				<input hidden="hidden" name="id" th:value="${food.id}"/>
+				<input th:id="'selected'+${food.id}" class="checkboxFood" type="checkbox"/>
+				</td>
 				
 				<td><a  th:href="@{/food/orderInfo(id=${food.id})}" > <span th:text="${food.foodName}"></span></a></td>
 				<td th:text="${food.type}"></td>
@@ -32,12 +37,18 @@
 				<td th:text="${food.numberOfCalories}"></td>
 				<td th:text="${food.price}"></td>
 				<td th:text="${food.active}"></td>
-				<td>delete</td>
+				<td>
+					<input hidden="hidden" name="id" th:value="${food.id}"/>
+					<button th:id="oneFood-+${food.id}" class="btn btn-danger btn-xs delete-food" type="submit" value="delete">
+					<span class="fa fa-times"></span></button>
+				</td>
 				</tr>
 				</tbody>
 			</table>
+			
 		</div>
-	</div>
+		<button th:id="deleteSelected" class="btn btn-danger"></button>
+		</div>
 
 
 	<div th:replace="header :: body-bottom-scripts" />
