--- a/BackEnd/src/main/resources/templates/home.html
+++ b/BackEnd/src/main/resources/templates/home.html
@@ -7,6 +7,15 @@
 	<div th:replace="header :: navbar" />
 
 
+					<div class="row" >
+			<div class="col-xs-3">
+				<h2 class="section-headline">
+					<h2 class="text-center">  <i>Administration Page</i>
+					</h2>
+				</h2>
+			</div>
+
+		</div>
 
 	
 
