--- a/TipTop/src/main/resources/templates/header.html
+++ b/TipTop/src/main/resources/templates/header.html
@@ -32,7 +32,7 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				
-				<a class="navbar-brand" href="#">TipTop</a>
+				<a class="navbar-brand" href="@{/index}">TipTop</a>
 			</div>
 			<div id="navbar">
 				<ul class="nav navbar-nav navbar-left">
@@ -43,7 +43,7 @@
 						aria-expanded="false">MENU <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a  th:href="@{/menu}">Full menu</a></li>
-							<li><a  th:href="@{/calories}">Allergy an Calorie amount sort</a></li>
+							<li><a  th:href="@{/calories}">Personalised Search</a></li>
 							
 							
 						</ul></li>
