--- a/TipTop/src/main/resources/templates/myAccount.html
+++ b/TipTop/src/main/resources/templates/myAccount.html
@@ -57,7 +57,7 @@
 											<p style="color: #828282">Email</p>
 										</div>
 
-										<button type="submit" class="btn btn-primary">submit</button>
+										<button type="submit" class="btn btn-success">submit</button>
 									</form>
 								</div>
 							</div>
@@ -87,7 +87,7 @@
 											<p style="color: #828282">password</p>
 										</div>
 
-										<button type="submit" class="btn btn-primary">Log in</button>
+										<button type="submit" class="btn btn-success">Log in</button>
 									</form>
 								</div>
 							</div>
@@ -112,7 +112,7 @@
 											<p style="color: #828282">email</p>
 										</div>
 
-										<button type="submit" class="btn btn-primary">Submit</button>
+										<button type="submit" class="btn btn-success">Submit</button>
 									</form>
 								</div>
 							</div>
