mistake found in page navigation

--- a/TipTop/src/main/resources/templates/header.html
+++ b/TipTop/src/main/resources/templates/header.html
@@ -32,7 +32,7 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				
-				<a class="navbar-brand" href="@{/index}">TipTop</a>
+				<a class="navbar-brand" th:href="@{/}">TipTop</a>
 			</div>
 			<div id="navbar">
 				<ul class="nav navbar-nav navbar-left">
