--- a/TipTop/src/main/resources/templates/menu.html
+++ b/TipTop/src/main/resources/templates/menu.html
@@ -9,17 +9,20 @@
 
 	<div class="container">
 		<div class="row" >
-			<div class="col-xs-3">
+			<div class="col-xs-8">
 				<h2 class="section-headline">
+				
 					<h2 class="section-headline">  <i>MENU</i>
 					</h2>
 				</h2>
 			</div>
-
+			<div class="col-xs-4">
+				
+			</div>
 		</div>
 		<div class="row" style="margin-top: 60px;">
 		
-		<div class="col-xs-3">
+		<div class="col-xs-2">
 		<h3><label for="category">Category</label></h3>
 		<div class="list-group" id="category">
 		<a th:href="@{/menu(category='all')}" th:classappend="${activeAll}? 'active'" class="list-group-item">All</a>
@@ -35,7 +38,7 @@
 		</div>
 		</div>
 		
-			<div class="col-xs-9">
+			<div class="col-xs-10">
 				<div th:if="${emptyList}">
 					<h5 style="font-style: italic;">Oops, no result is found. Try
 						something else or try again later.</h5>
@@ -69,7 +72,7 @@
 												th:text="${#numbers.formatDecimal(food.price, 0 , 'COMMA', 2, 'POINT')}"></span></span>
 
 
-											<p th:utext="${#strings.abbreviate(food.description, 500)}"></p>
+											<p th:utext="${#strings.abbreviate(food.description, 1600)}"></p>
 										</div>
 									</div>
 								</div>
